unpackaged/main/default/objects/clcommon__Repayment_Plan__c/clcommon__Repayment_Plan__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture the Repyament plan for any contract.</description>
    <label>Repayment Plan</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Repayment Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>