unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Due_Day__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Due_Day__c</fullName>
    <inlineHelpText>The day of every cycle on which the payment is expected. This is to capture if the due day is different from the payment start date</inlineHelpText>
    <label>Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>