unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Effective_Date__c</fullName>
    <inlineHelpText>Effective start date for the repayment plan</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>