unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Frequency__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Frequency__c</fullName>
    <inlineHelpText>Base frequency of payments during the plan period, this combined with frequency multiplier will indicate the effective frequency</inlineHelpText>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly-PD</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Single-Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>