unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Frequency_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Frequency_Multiplier__c</fullName>
    <inlineHelpText>A number to multiply with the frequency interval to get the effective frequency</inlineHelpText>
    <label>Frequency Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>