unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Number_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Number_Of_Payments__c</fullName>
    <inlineHelpText>Number of installments for the plan period</inlineHelpText>
    <label>Number of Payments</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>