unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Payment_Amount__c</fullName>
    <inlineHelpText>The expected payment amount per installment for the plan period</inlineHelpText>
    <label>Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>