unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Payment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Payment_Start_Date__c</fullName>
    <inlineHelpText>The date of first installment for the plan period</inlineHelpText>
    <label>Payment Start Date</label>
    <type>Date</type>
</CustomField>