unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Payment_Type__c</fullName>
    <inlineHelpText>Type of the installment</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
                <label>Equal Monthly Installments</label>
            </value>
            <value>
                <fullName>Equated Principal</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Principal Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>