unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/clcommon__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Sequence_Number__c</fullName>
    <inlineHelpText>A number used to order repayment plans as needed</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>