unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Repayment Plans</relationshipLabel>
    <relationshipName>Repayment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>