unpackaged/main/default/objects/clcommon__Repayment_Plan__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to CL Contract to which this repayment plan is applicable</description>
    <inlineHelpText>Reference to CL Contract to which this repayment plan is applicable</inlineHelpText>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Flexible Repayment Plan</relationshipLabel>
    <relationshipName>Repayment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>