unpackaged/main/default/objects/clcommon__Repayment_Plan__c/listViews/clcommon__All.listView-meta.xml
<ListView>
    <fullName>clcommon__All</fullName>
    <columns>clcommon__Payment_Amount__c</columns>
    <columns>clcommon__Number_Of_Payments__c</columns>
    <columns>clcommon__Effective_Date__c</columns>
    <columns>clcommon__Payment_Start_Date__c</columns>
    <columns>clcommon__Payment_Type__c</columns>
    <columns>clcommon__Frequency__c</columns>
    <columns>clcommon__Frequency_Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>